--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,7 +1,7 @@
 <h1>Lista de Productos en Tiempo Real</h1>
     <ul id="productList">
         {{#each products}}
-        <li>{{this.title}} - ${{this.price}}</li>
+        <li>{{this.title}} / {{this.description}} - ${{this.price}}</li>
         {{/each}}
     </ul>
 <script src="/socket.io/socket.io.js"></script>
